GPF-1578 fix agp compare menu gene names overflow
when white spaces or dashes are included in the name

--- a/gpfjs/src/app/autism-gene-profiles-table/autism-gene-profiles-table.component.css
+++ b/gpfjs/src/app/autism-gene-profiles-table/autism-gene-profiles-table.component.css
@@ -197,6 +197,7 @@
   width: 80%;
   text-overflow: ellipsis;
   overflow: hidden;
+  white-space: nowrap;
 }
 
 .compare-genes-close {
